refactor: 스왑의 내 물건, 요청 물건 조회 시 정렬, 조회 조건 추가 및 응답 추가